Replaces all instances of fate__settings with a utility class.

--- a/system/templates/item/consequence-sheet.hbs
+++ b/system/templates/item/consequence-sheet.hbs
@@ -1,6 +1,6 @@
 {{> "systems/fatex/templates/item/parts/layout/item-header.hbs" title="FAx.Item.Consequence.EditItem" item=item}}
 
-<div class="fatex__settings">
+<div class="fatex-u-full-width">
     <div class="fatex__setting">
         <header class="fatex-headline">
             <h3 class="fatex-headline__text">{{localize "FAx.Item.Consequence.Type.Label"}}</h3>
