--- a/system/templates/item/skill-sheet.hbs
+++ b/system/templates/item/skill-sheet.hbs
@@ -1,6 +1,6 @@
 {{> "systems/fatex/templates/item/parts/layout/item-header.hbs" title="FAx.Item.Skill.EditItem" item=item}}
 
-<div class="fatex__settings">
+<div class="fatex-u-full-width">
     {{> "systems/fatex/templates/item/parts/settings/setting-input.hbs"
         headline = "FAx.Item.Skill.Name"
         field = item.name
