Removes an unncessary wrapper around settings. Expands certain elements in the item templates for readability.

--- a/system/templates/item/parts/layout/item-header.hbs
+++ b/system/templates/item/parts/layout/item-header.hbs
@@ -20,4 +20,4 @@
         </div>
 
         <div class="desk__content">
-            <div class="desk__content__inner">
+            <div class="desk__content__inner desk__content__inner--item">
