--- a/src/styles/components/desk/desk.scss
+++ b/src/styles/components/desk/desk.scss
@@ -24,6 +24,10 @@
         display: flex;
         height: auto;
         min-height: 100%;
+
+        &--item {
+            flex-direction: column;
+        }
     }
 
     .desk__tabloid {
