--- a/system/templates/item/consequence-sheet.hbs
+++ b/system/templates/item/consequence-sheet.hbs
@@ -1,67 +1,68 @@
 {{> "systems/fatex/templates/item/parts/layout/item-header.hbs" title="FAx.Item.Consequence.EditItem" item=item}}
 
-<div class="fatex-u-full-width">
-    <div class="fatex__setting">
-        <header class="fatex-headline">
-            <h3 class="fatex-headline__text">{{localize "FAx.Item.Consequence.Type.Label"}}</h3>
-        </header>
+<div class="fatex__setting">
+    <header class="fatex-headline">
+        <h3 class="fatex-headline__text">{{localize "FAx.Item.Consequence.Type.Label"}}</h3>
+    </header>
 
-        <div class="fatex__setting__radio__group">
-            <div
-                class="fatex__setting__radio{{#if (eq 0 data.type)}} fatex__setting__radio--active{{/if}}"
-                data-value="0"
-                data-name="data.type"
-                data-dtype="Number"
-            >
-                <img class="fatex__setting__radio__image fatex__setting__radio__image--big" alt="Consequence" src="systems/fatex/assets/ui/consequence/type_consequence.png">
-                <span class="fatex__setting__radio__label">{{localize "FAx.Item.Consequence.Type.Consequence"}}</span>
-            </div>
+    <div class="fatex__setting__radio__group">
+        <div
+            class="fatex__setting__radio{{#if (eq 0 data.type)}} fatex__setting__radio--active{{/if}}"
+            data-value="0"
+            data-name="data.type"
+            data-dtype="Number"
+        >
+            <img class="fatex__setting__radio__image fatex__setting__radio__image--big" alt="Consequence" src="systems/fatex/assets/ui/consequence/type_consequence.png">
+            <span class="fatex__setting__radio__label">{{localize "FAx.Item.Consequence.Type.Consequence"}}</span>
+        </div>
 
-            <div
-                class="fatex__setting__radio{{#if (eq 1 data.type)}} fatex__setting__radio--active{{/if}}"
-                data-value="1"
-                data-name="data.type"
-                data-dtype="Number"
+        <div
+            class="fatex__setting__radio{{#if (eq 1 data.type)}} fatex__setting__radio--active{{/if}}"
+            data-value="1"
+            data-name="data.type"
+            data-dtype="Number"
+        >
+            <img 
+                class="fatex__setting__radio__image fatex__setting__radio__image--big"
+                alt="Condition"
+                src="systems/fatex/assets/ui/consequence/type_condition.png"
             >
-                <img class="fatex__setting__radio__image fatex__setting__radio__image--big" alt="Condition" src="systems/fatex/assets/ui/consequence/type_condition.png">
-                <span class="fatex__setting__radio__label">{{localize "FAx.Item.Consequence.Type.Condition"}}</span>
-            </div>
+
+            <span class="fatex__setting__radio__label">{{localize "FAx.Item.Consequence.Type.Condition"}}</span>
         </div>
     </div>
-
-    {{> "systems/fatex/templates/item/parts/settings/setting-input.hbs"
-        headline = "FAx.Item.Consequence.Value"
-        fieldName = "data.value"
-        field = data.value
-    }}
-
-    {{> "systems/fatex/templates/item/parts/settings/setting-input.hbs"
-        headline = "FAx.Item.Consequence.Label"
-        fieldName = "data.label"
-        field = data.label
-        help = "FAx.Item.Consequence.LabelHelp"
-    }}
-
-    {{> "systems/fatex/templates/item/parts/settings/setting-input.hbs"
-        headline = "FAx.Item.Consequence.Icon"
-        help = "FAx.Item.Consequence.IconHelp"
-        fieldName = "data.icon"
-        field = data.icon
-    }}
-
-    {{!--Description is disabled for now--}}
-    {{!--{{> "systems/fatex/templates/item/parts/settings/setting-input.hbs"
-        headline = "FAx.Item.Consequence.Description"
-        help = "FAx.Item.Consequence.DescriptionHelp"
-        fieldName = "data.description"
-        field = data.description
-    }}--}}
-
-
-    {{> "systems/fatex/templates/item/parts/settings/setting-automation-skill-enable.hbs"
-        headline = "FAx.Item.Automation.Headline"
-    }}
 </div>
 
-{{> "systems/fatex/templates/item/parts/layout/item-footer.hbs"}}
+{{> "systems/fatex/templates/item/parts/settings/setting-input.hbs"
+    headline = "FAx.Item.Consequence.Value"
+    fieldName = "data.value"
+    field = data.value
+}}
 
+{{> "systems/fatex/templates/item/parts/settings/setting-input.hbs"
+    headline = "FAx.Item.Consequence.Label"
+    fieldName = "data.label"
+    field = data.label
+    help = "FAx.Item.Consequence.LabelHelp"
+}}
+
+{{> "systems/fatex/templates/item/parts/settings/setting-input.hbs"
+    headline = "FAx.Item.Consequence.Icon"
+    help = "FAx.Item.Consequence.IconHelp"
+    fieldName = "data.icon"
+    field = data.icon
+}}
+
+{{!--Description is disabled for now--}}
+{{!--{{> "systems/fatex/templates/item/parts/settings/setting-input.hbs"
+    headline = "FAx.Item.Consequence.Description"
+    help = "FAx.Item.Consequence.DescriptionHelp"
+    fieldName = "data.description"
+    field = data.description
+}}--}}
+
+{{> "systems/fatex/templates/item/parts/settings/setting-automation-skill-enable.hbs"
+    headline = "FAx.Item.Automation.Headline"
+}}
+
+{{> "systems/fatex/templates/item/parts/layout/item-footer.hbs"}}
