--- a/system/templates/item/parts/settings/setting-text.hbs
+++ b/system/templates/item/parts/settings/setting-text.hbs
@@ -1,4 +1,4 @@
-<div class="fatex__setting">
+<div class="fatex-setting">
     <header class="fatex-headline ">
         <h3 class="fatex-headline__text">{{localize headline}}</h3>
     </header>
