--- a/system/templates/item/stress-sheet.hbs
+++ b/system/templates/item/stress-sheet.hbs
@@ -7,7 +7,7 @@
     placeholder = "FAx.Item.Stress.Name"
 }}
 
-<div class="fatex__setting">
+<div class="fatex-setting">
     <header class="fatex-headline">
         <h3 class="fatex-headline__text">{{localize "FAx.Item.Stress.Size"}}</h3>
     </header>
@@ -31,7 +31,7 @@
     </div>
 </div>
 
-<div class="fatex__setting">
+<div class="fatex-setting">
     <header class="fatex-headline ">
         <h3 class="fatex-headline__text">{{localize "FAx.Item.Stress.Boxes.Label"}}</h3>
     </header>
@@ -81,7 +81,7 @@
     </div>
 </div>
 
-<div class="fatex__setting{{#if (ne 2 data.labelType)}} fatex-u-disabled{{/if}}">
+<div class="fatex-setting{{#if (ne 2 data.labelType)}} fatex-u-disabled{{/if}}">
     <header class="fatex-headline">
         <h3 class="fatex-headline__text">{{localize "FAx.Item.Stress.Boxes.Custom"}}</h3>
     </header>
