--- a/system/templates/item/parts/settings/setting-automation-skill-enable.hbs
+++ b/system/templates/item/parts/settings/setting-automation-skill-enable.hbs
@@ -1,4 +1,4 @@
-<div class="fatex__automation fatex__setting fatex__setting--min-height">
+<div class="fatex-setting fatex__setting--min-height">
     <header class="fatex-headline">
         <h3 class="fatex-headline__text">{{localize headline}}</h3>
 
