--- a/system/templates/item/parts/settings/setting-rank.hbs
+++ b/system/templates/item/parts/settings/setting-rank.hbs
@@ -3,10 +3,10 @@
         <h3 class="fatex-headline__text">{{localize headline}}</h3>
     </header>
 
-    <div class="fatex__setting__radio__group fatex__setting__radio__group--ranks">
+    <div class="fatex-radio-group fatex-radio-group--ranks">
         {{#each radioItems as |radioItem radioItemIndex|}}
             <div
-                class="fatex__setting__radio{{#if (eq radioItem ../field)}} fatex__setting__radio--active{{/if}}{{#if (lt radioItem 0)}} fatex__setting__radio--negative{{/if}}"
+                class="fatex-eb-radio-button fatex-radio-rank{{#if (eq radioItem ../field)}} fatex-radio-rank--active{{/if}}{{#if (lt radioItem 0)}} fatex-radio-rank--negative{{/if}}"
                 data-value="{{ radioItem }}"
                 data-name="{{ ../fieldName }}"
                 data-dtype="{{ ../dtype }}"
@@ -14,6 +14,5 @@
                 <span class="fatex__setting__radio__value">{{#if (gte radioItem 0)}}+{{/if}}{{ radioItem }}</span>
             </div>
         {{/each}}
-
     </div>
 </div>
