--- a/system/templates/apps/sheet-setup.hbs
+++ b/system/templates/apps/sheet-setup.hbs
@@ -33,8 +33,8 @@
                                     <header class="fatex-headline">
                                         <h2 class="fatex-headline__text">{{typeLabel}}</h2>
 
-                                        <div class="fatex-actions fatex-actions--headline">
-                                            <i class="fatex-eb-toggle-selection fatex-actions__icon fatex-actions__icon--no-hide fa fa-sync"></i>
+                                        <div class="fatex-eb-toggle-selection fatex-actions fatex-actions--toggle">
+                                            <i class="fatex-actions__icon fatex-actions__icon--no-hide fa fa-sync"></i>
                                             <span class="fatex-actions__text">
                                                 {{localize "FAx.Apps.Setup.Actions.Setup.ToggleSelection"}}
                                             </span>
