--- a/system/templates/item/parts/settings/setting-editor.hbs
+++ b/system/templates/item/parts/settings/setting-editor.hbs
@@ -3,8 +3,8 @@
         <h3 class="fatex-headline__text">{{localize headline}}</h3>
     </header>
 
-    <label class="fatex__setting__editor" for="{{ fieldName }}">
-        <div class="fatex__setting__editor__editor">
+    <label for="{{ fieldName }}">
+        <div class="fatex-setting__editor-wrapper">
             {{editor content=field target=fieldName button=true owner=owner editable=editable}}
         </div>
         {{#if help}}<span class="fatex-text-input__setting-label">{{localize help}}</span>{{/if}}
