--- a/system/templates/item/parts/settings/setting-text.hbs
+++ b/system/templates/item/parts/settings/setting-text.hbs
@@ -3,7 +3,7 @@
         <h3 class="fatex-headline__text">{{localize headline}}</h3>
     </header>
 
-    <label class="fatex__setting__text" for="{{ fieldName }}">
+    <label class="fatex-setting__text" for="{{ fieldName }}">
         <div contenteditable="true" class="fatex-text-input" data-edit="{{ fieldName }}">{{{field}}}</div>
 
         {{#if help}}<span class="fatex-text-input__setting-label">{{localize help}}</span>{{/if}}
