Adds new binding classes for template header buttons and template creation buttons.

--- a/system/templates/apps/template-actors-picker.hbs
+++ b/system/templates/apps/template-actors-picker.hbs
@@ -1,5 +1,5 @@
 {{#*inline "centerPartial"}}
-    <div class="fatex-header__center fatex__template__header__settings">
+    <div class="fatex-eb-template-header-button fatex-header__center">
         <span class="fatex-header__label">{{localize "FAx.Template.Picker.Configuration"}}</span>
         <i class="fas fa-cogs fatex__item__header__title"></i>
     </div>
