--- a/system/templates/apps/template-actors.hbs
+++ b/system/templates/apps/template-actors.hbs
@@ -1,5 +1,5 @@
 {{#*inline "centerPartial"}}
-    <div class="fatex-header__center fatex__template__header__settings fatex__template__create">
+    <div class="fatex-eb-template-header-button fatex-eb-create-template fatex-header__center fatex__template__create">
         <span class="fatex-header__label">{{localize "FAx.Settings.Templates.App.CreateNew"}}</span>
         <i class="fas fa-plus fatex__item__header__title"></i>
     </div>
