--- a/system/templates/apps/sheet-setup.hbs
+++ b/system/templates/apps/sheet-setup.hbs
@@ -17,13 +17,13 @@
         </h2>
 
         <div class="fatex__vertical_tabs">
-            <nav class="fatex__vertical_tabs__navigation">
+            <nav class="fatex-eb-vertical-tabs-navigation fatex__vertical_tabs__navigation">
                 {{#each systems as |system|}}
                     <a class="fatex__vertical_tabs__navigation__item item" data-tab="{{system.identifier}}">{{system.name}}</a>
                 {{/each}}
             </nav>
 
-            <div class="fatex__vertical_tabs__content">
+            <div class="fatex-eb-vertical-tabs-content fatex__vertical_tabs__content">
                 {{#each systems as |system|}}
                     <div class="fatex__vertical_tabs__tab tab" data-tab="{{system.identifier}}">
                         <div class="fatex__vertical_tabs__tab__content">
