--- a/system/templates/actor/group.hbs
+++ b/system/templates/actor/group.hbs
@@ -4,7 +4,7 @@
     </div>
 
     <form autocomplete="off" class="fatex-u-full-height {{cssClass}}">
-        <div class="fatex__actor_group__settings">
+        <div class="fatex-eb-actor_group-settings fatex__actor_group__settings">
             <input class="fatex__header__name__input" name="name" type="text" value="{{actor.name}}" />
             <input class="fatex__header__name__input" name="data.groupType" type="text" value="{{actor.data.groupType}}" />
 
