--- a/system/templates/actor/parts/tabs/skills.hbs
+++ b/system/templates/actor/parts/tabs/skills.hbs
@@ -12,7 +12,10 @@
 
     <div class="fatex-item-grid fatex-item-grid--skills{{#if options.enableColumns}} fatex-item-grid--two-column{{/if}}">
         {{#each skills as |skill skillIndex|}}
-            <div class="fatex__skill fatex__input--icon fatex-eb-sortable" data-item-id="{{skill._id}}">
+            <div
+                class="fatex-eb-sortable fatex-eb-skill fatex__skill fatex__input--icon"
+                data-item-id="{{skill._id}}"
+            >
                 <div class="fatex-headline">
                     <h3 class="fatex-headline__text">{{skill.name}}</h3>
 
