Updates the skill reference change handler to use a new binding class. Updates the templates to use the new binding class.

--- a/system/templates/item/parts/settings/setting-automation-boxes.hbs
+++ b/system/templates/item/parts/settings/setting-automation-boxes.hbs
@@ -12,7 +12,7 @@
         <div class="fatex-u-pos-relative fatex__skill__reference" data-index="{{reference.index}}">
             <div class="fatex__skill__reference__condition">
                 <select
-                    class="fatex__skill__reference__change fatex__skill__reference__change--argument"
+                    class="fatex-eb-change-skill-reference"
                     data-index="{{reference.index}}"
                     data-field="argument"
                     data-dtype="Number"
@@ -27,7 +27,7 @@
                 <span>{{localize "FAx.Item.Automation.BoxesIf"}}</span>
 
                 <select
-                    class="fatex__skill__reference__change fatex__skill__reference__change--skill"
+                    class="fatex-eb-change-skill-reference fatex-eb-change-skill-reference--skill"
                     data-index="{{reference.index}}"
                     data-field="skill"
                 >
@@ -41,7 +41,7 @@
                 </select>
 
                 <select
-                    class="fatex__skill__reference__change fatex__skill__reference__change--operator"
+                    class="fatex-eb-change-skill-reference fatex-eb-change-skill-reference--operator"
                     data-index="{{reference.index}}"
                     data-field="operator"
                     data-dtype="Number"
@@ -54,7 +54,7 @@
                 </select>
 
                 <select
-                    class="fatex__skill__reference__change fatex__skill__reference__change--condition"
+                    class="fatex-eb-change-skill-reference fatex-eb-change-skill-reference--condition"
                     data-index="{{reference.index}}"
                     data-field="condition"
                     data-dtype="Number"
