--- a/system/templates/item/parts/settings/setting-automation-skill-enable.hbs
+++ b/system/templates/item/parts/settings/setting-automation-skill-enable.hbs
@@ -2,7 +2,7 @@
     <header class="fatex-headline">
         <h3 class="fatex-headline__text">{{localize headline}}</h3>
 
-        <div class="fatex-eb-create-skill-reference fatex-actions fatex-actions--headline">
+        <div class="fatex-eb-create-skill-reference fatex-actions fatex-actions--setting">
             <i class="fatex-actions__icon fatex-actions__icon--no-hide fa fa-plus"></i>
             <span class="fatex-actions__text">{{localize "FAx.Item.Automation.AddSkillRef"}}</span>
         </div>
