--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -47,5 +47,6 @@ input[type="text"].fatex-text-input,
 
     &__setting-label {
         font-size: 10px;
+        padding-left: $component-padding;
     }
 }
