--- a/system/templates/item/parts/settings/setting-automation-skill-enable.hbs
+++ b/system/templates/item/parts/settings/setting-automation-skill-enable.hbs
@@ -8,13 +8,13 @@
         </div>
     </header>
 
-    {{#each statusReferences as |reference|}}
-        <div class="fatex-u-pos-relative fatex__skill__reference" data-index="{{reference.index}}">
-            <div class="fatex__skill__reference__condition">
+    <div class="automation-list">
+        {{#each statusReferences as |reference|}}
+            <div class="fatex-u-pos-relative automation-list__item" data-index="{{reference.index}}">
                 <span>{{localize "FAx.Item.Automation.DisableUntil"}}</span>
 
                 <select
-                    class="fatex-eb-change-skill-reference fatex-eb-change-skill-reference--skill"
+                    class="fatex-eb-change-skill-reference"
                     data-index="{{reference.index}}"
                     data-field="skill"
                 >
@@ -52,17 +52,17 @@
                         </option>
                     {{/each}}
                 </select>
-            </div>
 
-            <div class="fatex-actions fatex-actions--automation-item">
-                <i
-                    class="fatex-eb-remove-skill-reference fatex-actions__icon fatex-u-delete fa fa-trash fatex-actions__icon--no-hide"
-                    data-index="{{reference.index}}"></i>
+                <div class="fatex-actions fatex-actions--automation-item">
+                    <i
+                        class="fatex-eb-remove-skill-reference fatex-actions__icon fatex-u-delete fa fa-trash fatex-actions__icon--no-hide"
+                        data-index="{{reference.index}}"></i>
+                </div>
             </div>
-        </div>
-    {{else}}
-        <div class="fatex__skill__reference__description">
-            {{localize "FAx.Item.Automation.Description"}}
-        </div>
-    {{/each}}
+        {{else}}
+            <div class="fatex-automation__description">
+                {{localize "FAx.Item.Automation.Description"}}
+            </div>
+        {{/each}}
+    </div>
 </div>
