Minor tweaks to the left patting of the setting labels. Removes right padding for the automation items.

--- a/src/styles/components/automation.scss
+++ b/src/styles/components/automation.scss
@@ -12,6 +12,6 @@
 
     &__description {
         font-size: 12px;
-        padding: 0 $component-padding;
+        padding-left: $component-padding;
     }
 }
