--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -47,6 +47,6 @@ input[type="text"].fatex-text-input,
 
     &__setting-label {
         font-size: 10px;
-        padding-left: $component-padding;
+        padding-left: $component-padding / 2;
     }
 }
