Updates all of the desk classes to use the new naming scheme. Removes several unncessary style declarations for the desk classes. Completely removes the inner desk content wrapper class. Simplifies all of the selectors used in the desk styles.

--- a/src/styles/components/apps/templates/templates.scss
+++ b/src/styles/components/apps/templates/templates.scss
@@ -1,8 +1,9 @@
 .fatex__templates {
-    padding: $component-padding;
     display: flex;
     align-items: center;
+    height: 100%;
     min-width: 100%;
+    padding: $component-padding;
 }
 
 .fatex__template__break {
