--- a/system/templates/apps/parts/layout/app-header.hbs
+++ b/system/templates/apps/parts/layout/app-header.hbs
@@ -1,8 +1,7 @@
 <form autocomplete="off" class="fatex-u-full-height {{cssClass}}">
-    <div class="desk">
-
+    <div class="fatex-desk">
         {{!--HEADER--}}
-        <div class="desk__header">
+        <div class="fatex-desk__header">
             <div class="fatex-header">
                 <div class="fatex-header__name">
                     <label class="fatex-header__label fatex__item__header__label">
@@ -26,5 +25,4 @@
             </div>
         </div>
 
-        <div class="desk__content">
-            <div class="desk__content__inner">
+        <div class="fatex-desk__content">
