--- a/system/templates/item/parts/layout/item-header.hbs
+++ b/system/templates/item/parts/layout/item-header.hbs
@@ -1,8 +1,7 @@
 <form autocomplete="off" class="fatex-u-full-height {{cssClass}}">
-    <div class="desk">
-
+    <div class="fatex-desk">
         {{!--HEADER--}}
-        <div class="desk__header">
+        <div class="fatex-desk__header">
             <div class="fatex-header">
                 <div class="fatex-header__name">
                     <label class="fatex-header__label">
@@ -19,4 +18,4 @@
             </div>
         </div>
 
-        <div class="desk__content">
+        <div class="fatex-desk__content">
