--- a/src/styles/fatex.scss
+++ b/src/styles/fatex.scss
@@ -10,6 +10,7 @@
 
 @import "utils/disabled";
 @import "utils/effects";
+@import "utils/flex";
 @import "utils/padding";
 @import "utils/position";
 @import "utils/sizing";
