--- a/system/templates/actor/limited.hbs
+++ b/system/templates/actor/limited.hbs
@@ -1,34 +1,30 @@
 <form autocomplete="off" class="fatex-u-full-height {{cssClass}}">
-    <div class="desk">
-
+    <div class="fatex-desk">
         {{!--HEADER--}}
-        <div class="desk__header">
+        <div class="fatex-desk__header">
             {{> "systems/fatex/templates/actor/parts/header.hbs"}}
         </div>
 
-        <div class="desk__content">
-            <div class="desk__content__inner{{#if sheetConfig.flipped}} desk__content__inner--flipped{{/if}}">
-
-                <div class="desk__tabloid">
-                    {{!--Tabs--}}
-                    <div class="desk__tabs fatex__tabs">
-                        <div class="fatex-tabs-content">
-                            {{!--Bio--}}
-                            <div class="fatex__tabs__tab fatex__tabs__tab--bio">
-                                <div class="fatex__tabs__tab__content">
-                                    {{> "systems/fatex/templates/actor/parts/tabs/bio.hbs"}}
-                                </div>
+        <div class="fatex-desk__content fatex-desk__content--actor-sheet {{#if sheetConfig.flipped}} fatex-u-flex-row-reverse{{/if}}">
+            <div class="fatex-desk__tabloid">
+                {{!--Tabs--}}
+                <div class="fatex-desk__tabs fatex__tabs">
+                    <div class="fatex-tabs-content">
+                        {{!--Bio--}}
+                        <div class="fatex__tabs__tab fatex__tabs__tab--bio">
+                            <div class="fatex__tabs__tab__content">
+                                {{> "systems/fatex/templates/actor/parts/tabs/bio.hbs"}}
                             </div>
                         </div>
                     </div>
-
-                    {{> "systems/fatex/templates/actor/parts/copyright.hbs"}}
                 </div>
 
-                {{!--Sidebar--}}
-                <div class="desk__sidebar">
-                    {{> "systems/fatex/templates/actor/parts/sidebar/artwork.hbs"}}
-                </div>
+                {{> "systems/fatex/templates/actor/parts/copyright.hbs"}}
+            </div>
+
+            {{!--Sidebar--}}
+            <div class="fatex-desk__sidebar{{#if sheetConfig.flipped}} fatex-desk__sidebar--reversed{{/if}}">
+                {{> "systems/fatex/templates/actor/parts/sidebar/artwork.hbs"}}
             </div>
         </div>
     </div>
